test/src/e2e_vm_tests/test_programs/should_pass/language/aliased_imports/src/wiz.sw
library;

pub struct Wiz {
    pub wiz: u64,
}
