test/src/e2e_vm_tests/test_programs/should_fail/trait_associated_const_missing_impl/src/main.sw
library;

trait ConstantId {
    const ID: u32;
}

struct Struct { }

impl ConstantId for Struct { }
